# tusk

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  tusk.sh  tusk_mei_roundtrip.sh  tusk_roundtrip.sh  tusk_split.sh
crates/bindings/cli/: Cargo.toml
crates/bindings/cli/src/: main.rs
crates/bindings/wasm/: Cargo.toml
crates/bindings/wasm/src/: lib.rs
crates/core/convert/: Cargo.toml
crates/core/convert/src/: context.rs  error.rs  lib.rs  mei_to_musicxml.rs  musicxml_to_mei.rs
crates/core/convert/src/mei_to_musicxml/: attributes.rs  direction.rs  mod.rs  note.rs  parts.rs  structure.rs  utils.rs
crates/core/convert/src/musicxml_to_mei/: attributes.rs  direction.rs  mod.rs  note.rs  parts.rs  structure.rs  utils.rs
crates/core/format/: Cargo.toml
crates/core/format/src/: lib.rs
crates/core/model/: Cargo.toml  build.rs
crates/core/model/src/: extensions.rs  lib.rs
crates/core/model/src/extensions/: mod.rs  tests.rs
crates/core/model/src/musicxml/: attributes.rs  duration.rs  harmony.rs  listening.rs  lyric.rs  notations.rs  technical.rs
crates/core/model/src/musicxml_ext/: metronome.rs  mod.rs  ornament.rs  technical.rs  tests.rs
crates/formats/lilypond/: Cargo.toml  build.rs
crates/formats/lilypond/src/: lib.rs
crates/formats/lilypond/src/export/: book.rs  chord_names.rs  conversion.rs  figured_bass.rs  grace.rs  lyrics.rs  mod.rs  operations.rs  output_defs.rs  pitch_context.rs  repeats.rs  signatures.rs  tests.rs  tests_book.rs  tests_chords.rs  tests_drums.rs  tests_export_completion.rs  tests_figures.rs  tests_functions.rs  tests_markup.rs  tests_output_defs.rs  tests_properties.rs  tests_scheme.rs  tests_skip.rs  tests_tempo_marks.rs  tests_toplevel_markup.rs  tests_variables.rs
crates/formats/lilypond/src/import/: beams.rs  context_analysis.rs  control_events.rs  conversion.rs  durations.rs  events.rs  lyrics.rs  measures.rs  mod.rs  output_def_conv.rs  output_defs.rs  signatures.rs  tests.rs  tests_book.rs  tests_chords.rs  tests_completion.rs  tests_control.rs  tests_drums.rs  tests_figures.rs  tests_functions.rs  tests_output_defs.rs  tests_properties.rs  tests_tempo_marks.rs  tests_toplevel_markup.rs  tests_validation.rs  tests_variables.rs  utils.rs  variables.rs
crates/formats/lilypond/src/lexer/: mod.rs  tokens.rs
crates/formats/lilypond/src/model/: duration.rs  markup.rs  mod.rs  note.rs  pitch.rs  property.rs  scheme.rs  signature.rs
crates/formats/lilypond/src/parser/: chords.rs  drums.rs  figures.rs  functions.rs  lyrics.rs  markup.rs  mod.rs  note_events.rs  numeric.rs  properties.rs  raw_blocks.rs  signatures.rs  tests.rs  tests_barcheck.rs  tests_chord_rep.rs  tests_chords.rs  tests_drums.rs  tests_error_recovery.rs  tests_figures.rs  tests_grace.rs  tests_lyrics.rs  tests_markup.rs  tests_music_functions.rs  tests_output_defs.rs  tests_post_events.rs  tests_properties.rs  tests_repeats.rs  tests_scheme.rs  tests_tempo_marks.rs  tests_variables.rs
crates/formats/lilypond/src/serializer/: mod.rs  notes.rs  tests.rs
crates/formats/lilypond/src/validator/: mod.rs  tests.rs  tests_extended.rs
crates/formats/lilypond/tests/: cross_format.rs  lilypond_render.rs  roundtrip.rs
crates/formats/mei/: Cargo.toml  README.md  build.rs
crates/formats/mei/codegen/: Cargo.toml  README.md
crates/formats/mei/codegen/src/: generator.rs  lib.rs  main.rs  parser.rs  rng.rs
crates/formats/mei/src/: lib.rs  roundtrip_tests.rs  xml_compare.rs
crates/formats/mei/src/deserializer/: impls.rs  mod.rs
crates/formats/mei/src/roundtrip_tests/: analysis.rs  biblio.rs  control.rs  defs.rs  document.rs  drama.rs  editorial.rs  facsimile.rs  harmony.rs  header.rs  mensural.rs  midi.rs  mod.rs  names.rs  neumes.rs  note.rs  structure.rs  symbols.rs  tablature.rs  text_containers.rs
crates/formats/mei/src/serializer/: impls.rs  mod.rs
crates/formats/mei/src/versions/: convert.rs  mod.rs
crates/formats/mei/tests/: roundtrip.rs  schema_validation.rs
crates/formats/mei/tests/disabled/: README.md  schema_validation.rs
crates/formats/musicxml/: Cargo.toml  README.md  build.rs
crates/formats/musicxml/codegen/: Cargo.toml  README.md
crates/formats/musicxml/codegen/src/: ast.rs  generator.rs  lib.rs  main.rs  xsd.rs
crates/formats/musicxml/src/: context.rs  convert.rs  lib.rs  mxl.rs  parser.rs
crates/formats/musicxml/src/context/: glissandos.rs  hairpins.rs  ids.rs  mod.rs  octaves.rs  positions.rs  slurs.rs  ties.rs  tremolos.rs  tuplets.rs
crates/formats/musicxml/src/export/: attributes.rs  content.rs  direction.rs  figured_bass.rs  harmony.rs  listening.rs  measure_style.rs  mod.rs  note.rs  parts.rs  print.rs  sound.rs  structure.rs  utils.rs
crates/formats/musicxml/src/import/: attributes.rs  barline.rs  direction.rs  ending.rs  figured_bass.rs  harmony.rs  listening.rs  measure_style.rs  mod.rs  note.rs  parts.rs  print.rs  restructure.rs  sound.rs  structure.rs  utils.rs
crates/formats/musicxml/src/model/: attributes.rs  data.rs  direction.rs  duration.rs  elements.rs  figured_bass.rs  harmony.rs  listening.rs  lyric.rs  mod.rs  notations.rs  note.rs  print.rs  technical.rs
crates/formats/musicxml/src/parser/: parse_attributes.rs  parse_defaults.rs  parse_direction.rs  parse_figured_bass.rs  parse_harmony.rs  parse_listening.rs  parse_metronome.rs  parse_notations.rs  parse_note.rs  parse_part_list.rs  parse_print.rs  parse_technical.rs  tests.rs
crates/formats/musicxml/src/serializer/: directions.rs  elements.rs  figured_bass.rs  harmony.rs  listening.rs  mod.rs  notations.rs  print.rs  score.rs  sound.rs  technical.rs
crates/formats/musicxml/tests/: mei_to_musicxml.rs  roundtrip.rs
docs/: conversion-notes.md  gap.md  (+8 more)
tests/roundtrip/: Cargo.toml  build.rs
tests/roundtrip/src/: lib.rs
tests/roundtrip/tests/: lilypond.rs  lilypond_via_mei.rs  lilypond_via_musicxml.rs  mei.rs  mei_via_lilypond.rs  mei_via_musicxml.rs  musicxml.rs  musicxml_via_lilypond.rs  musicxml_via_mei.rs
tools/mei-codegen/: Cargo.toml  README.md
tools/mei-codegen/src/: ast.rs  generator.rs  main.rs  parser.rs
(+568 files in other folders)
