[workspace]
members = [
    # Core crates
    "crates/core/model",
    "crates/core/format",
    "crates/formats/mei",
    "crates/formats/musicxml",
    "crates/formats/lilypond",
    "crates/bindings/cli",
    "crates/bindings/wasm",

    # Format codegen (standalone, no cross-deps)
    "crates/formats/mei/codegen",
    "crates/formats/musicxml/codegen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Simon Waloschek"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/waloschek/tusk"

[workspace.dependencies]
# Internal crates
tusk-model = { path = "crates/core/model" }
tusk-format = { path = "crates/core/format" }
tusk-mei = { path = "crates/formats/mei" }
tusk-musicxml = { path = "crates/formats/musicxml" }
tusk-lilypond = { path = "crates/formats/lilypond" }

# External dependencies
derive_more = { version = "2.1.1", features = ["full"] }
indexmap = "2.13.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.18"
tracing = "0.1.44"
quick-xml = { version = "0.39.0", features = ["serialize"] }
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
indicatif = "0.18.3"
