[package]
name = "mei-codegen"
version = "0.1.0"
edition = "2024"
description = "Generate Rust model code from MEI ODD specification"
publish = false

[dependencies]
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
heck = "0.5"          # Case conversion (snake_case, PascalCase)
proc-macro2 = "1"     # Code generation
quote = "1"           # Code generation
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"  # Rust code formatting
anyhow = "1"
