[package]
name = "tusk-wasm"
description = "WASM bindings for Tusk (MusicXML ↔ MEI converter)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tusk-mei = { workspace = true }
tusk-musicxml = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
