[package]
name = "tusk-convert"
description = "Conversion layer between MusicXML and MEI for Tusk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tusk-model = { workspace = true }
tusk-mei = { workspace = true }
tusk-musicxml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
