[package]
name = "tusk-model"
description = "MEI-based internal model for Tusk (MusicXML ↔ MEI converter)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true }
indexmap = { workspace = true }
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
