[package]
name = "tusk-model"
description = "MEI-based internal model for Tusk (MusicXML ↔ MEI converter)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tusk-mei-codegen = { path = "../../formats/mei/codegen" }

[dev-dependencies]
serde_json = "1.0.149"
