[package]
name = "tusk-musicxml"
description = "MusicXML parsing and serialization for Tusk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tusk-model = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tusk-mei.workspace = true
