[package]
name = "tusk-musicxml"
description = "MusicXML parsing and serialization for Tusk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tusk-model = { workspace = true }
tusk-format = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tusk-mei.workspace = true
