[package]
name = "tusk-musicxml"
description = "MusicXML parsing and serialization for Tusk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tusk-musicxml-codegen = { path = "codegen" }
anyhow = { workspace = true }

[dependencies]
tusk-model = { workspace = true }
tusk-format = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.149"
zip = { version = "7.4.0", default-features = false, features = ["deflate-flate2", "deflate-flate2-zlib-rs"] }

[dev-dependencies]
tusk-mei = { workspace = true }
tusk-model = { workspace = true }
